--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -80,7 +80,7 @@
     .project-details > p {
         padding: .3em 0;
         line-height: 1.2em;
-        font-size: large;
+        font-size: medium;
         margin: 0;
     }
 }
